tests/unit-fail/padding-1.ref
Error: USP-STDIO2
Description: Printing an unspecified value.
Type: Unspecified value or behavior.
See also: C11 sec. 7.21.6.1:8
  at printf(padding-1.c:7)
  at main(padding-1.c:7)
Execution failed (configuration dumped)
